samples/_failures_safe/1761444927_b543d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_877ebeaf.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_877ebeaf.c:185:5: error: expected declaration or statement at end of input
  185 |     if (!tokens || count == 0) {
      |     ^~
./samples/SAFE/__tmp_877ebeaf.c:185:5: error: expected declaration or statement at end of input
